# lwpr

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  INSTALL.TXT  Makefile.am  Makefile.in  NEWS  README.TXT  configure  configure.ac
MinGW/: Makefile
VisualC/: buildmex.bat  lwpr_mex.def
VisualC/Express2008/: LWPR_VC2008.sln
VisualC/Express2008/Example_C/: Example_C.vcproj
VisualC/Express2008/Example_C++/: Example_C++.vcproj
VisualC/Express2008/dynLWPR/: dynLWPR.vcproj  lwpr.def
VisualC/Express2008/libLWPR/: libLWPR.vcproj
cmake/: FindNumPy.cmake
doc/: lwpr_doc.tex  lwpr_xml.dtd
example_c/: Makefile.am  Makefile.in  cross.c
example_cpp/: Makefile.am  Makefile.in  cross.cc  cross_eigen.cc
include/: Makefile.am  Makefile.in  lwpr.h  lwpr.hh  lwpr_config.h.cmake.in  lwpr_config.h.in  lwpr_math.h  lwpr_matlab.h  lwpr_xml.h
matlab/: lwpr_buildmex.m  lwpr_init.m  lwpr_num_data.m  lwpr_num_rfs.m  lwpr_pls_stats.m  lwpr_predict.m  lwpr_predict_J.m  lwpr_predict_JH.m  lwpr_predict_JcJ.m  lwpr_read_binary.m  lwpr_read_xml.m  lwpr_set.m  lwpr_storage.m  lwpr_update.m  lwpr_write_binary.m  lwpr_write_xml.m  lwpr_x_check_add_projection.m  lwpr_x_compute_projection.m  lwpr_x_compute_projection_d.m  lwpr_x_compute_projection_r.m  lwpr_x_dist_derivatives.m  lwpr_x_init_rf.m  lwpr_x_kernel.m  lwpr_x_predict_one.m  lwpr_x_predict_one_J.m  lwpr_x_predict_one_JcJ.m  lwpr_x_predict_one_gH.m  lwpr_x_update_distance_metric.m  lwpr_x_update_means.m  lwpr_x_update_one.m  lwpr_x_update_regression.m  test_lwpr_1D.m  test_lwpr_2D.m  test_lwpr_nD.m
mexoct/: Makefile.am
mexsrc/: Makefile.am  lwpr_has_expat.c  lwpr_mex_copy.c  lwpr_num_data.c  lwpr_num_rfs.c  lwpr_predict.c  lwpr_predict_J.c  lwpr_predict_JH.c  lwpr_predict_JcJ.c  lwpr_read_binary.c  lwpr_read_xml.c  lwpr_storage.c  lwpr_update.c  lwpr_write_binary.c  lwpr_write_xml.c  lwpr_x_check_add_projection.c  lwpr_x_compute_projection.c  lwpr_x_compute_projection_d.c  lwpr_x_compute_projection_r.c  lwpr_x_dist_derivatives.c  lwpr_x_init_rf.c  lwpr_x_predict_one.c  lwpr_x_update_distance_metric.c  lwpr_x_update_means.c  lwpr_x_update_one.c  lwpr_x_update_regression.c
python/: Makefile  lwprmodule.c  setup.py  setup_nolib.py  test.py
src/: Makefile.am  Makefile.in  lwpr.c  lwpr_aux.c  lwpr_binio.c  lwpr_math.c  lwpr_math_sse.c  lwpr_matlab.c  lwpr_mem.c  lwpr_xml.c
tests/: Makefile.am  Makefile.in  cross_check.c
tests/python/: test_1d.py
