include_HEADERS = lwpr.h \
                     lwpr_config.h \
                     lwpr_config_def.h \
                     lwpr_aux.h \
                     lwpr_math.h \
                     lwpr_binio.h \
                     lwpr_mem.h \
                     lwpr_xml.h \
                     lwpr_matlab.h \
                     lwpr.hh 
                  
