lib_LTLIBRARIES = liblwpr.la 

liblwpr_la_SOURCES = lwpr.c \
                     lwpr_aux.c \
                     lwpr_math.c \
                     lwpr_binio.c \
                     lwpr_mem.c \
                     lwpr_xml.c
             
liblwpr_la_CFLAGS = -I$(srcdir)/../include
liblwpr_la_LDFLAGS = -version-info 1:2:0


